# ondevice-accessibility-agent

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/helpagent/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/host-toolchain/: host-toolchain.cmake
app/src/main/java/com/example/helpagent/: AgentCommand.kt  AgentController.kt  AutoAgentService.kt  MainActivity.kt
app/src/main/java/com/example/helpagent/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/helpagent/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
patches/llama.cpp-b4500/: ggml-vulkan-CMakeLists.txt
